--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -2,9 +2,124 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>MathonGo Library</title>
+
+    <link rel="stylesheet" href="./../css/bootstrap.css">
+
+    <link rel="stylesheet" href="index.css">
+    <link href="./../font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <script src="./../js/jquery-3.2.1.js"></script>
+    <script src="./../js/tether.js"></script>
+    <script src="./../js/bootstrap.js"></script>
+
+    <script src="index.js"></script>
 </head>
 <body>
 
+
+<div class="container-fluid">
+    <div class="row no-gutters" style="height: 60px">
+        <div class="col-sm-12 header-bar">
+            <div class="row align-content-center">
+                <div class="col-sm-2">
+                    <img src="./../images/logo.png" style="height: 40px; padding-left: 30px">
+                </div>
+
+                <div class="col-sm-6 text-right">
+
+                    <span id="userName" class="align-middle text-uppercase"></span>
+                    <a id="logout"><i data-toggle="tooltip" title="Logout" data-placement="bottom" style="color: #555"
+                                      class="fa fa-sign-out fa-2x align-middle"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row no-gutters" style="min-height: 100%">
+        <div class="col-md-3 col-sm-12 col-12"
+             style="min-height:100%;background-color: #FBFBFB; box-shadow: 0 0 30px 5px rgba(111,111,111,0.59);z-index: 5">
+            <div class="row justify-content-center">
+                <ul style="list-style-type: none;padding-top:40px;padding-left: 20px;padding-right: 20px"
+                    class="col-md-10 col-sm-12 col-12 text-center">
+                    <li class="side-bar-contents align-content-center">
+                        <a class="a-style" href="/student/myCourses/">
+                            <h4 class="h4-hover-style">My Courses
+                            </h4>
+                        </a>
+                    </li>
+                    <li class="side-bar-contents align-content-center">
+                        <a class="a-style" href="/student/">
+                            <h4 class="h4-hover-style">All Courses
+                            </h4>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-md-9 col-sm-12 col-12" style="min-height:100%;background-color: #EFEFEF"><br>
+            <div id="allCoursesDiv" class="row ">
+                <ul class="list-inline hey text-center col-sm-12" id="courses-list">
+                    <!--<li class="li-card col-md-4 col-sm-12">-->
+                    <!--<div class="card">-->
+                    <!--<img class="card-img-top card-img-top img-fluid" src="/images/default_img.png" alt="Card image cap">-->
+                    <!--<div class="card-block">-->
+                    <!--<h4 class="card-title" style="color: #00C2FA">Card title</h4>-->
+
+                    <!--<a href="#" class="btn btn-primary" style="background-color: #F69F1B">Go somewhere</a>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="li-card col-md-4 col-sm-12">-->
+                    <!--<div class="card">-->
+                    <!--<img class="card-img-top card-img-top img-fluid" src="/images/default_img.png" alt="Card image cap">-->
+                    <!--<div class="card-block">-->
+                    <!--<h4 class="card-title">Card title</h4>-->
+
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="li-card col-md-4 col-sm-12">-->
+                    <!--<div class="card">-->
+                    <!--<img class="card-img-top card-img-top img-fluid" src="/images/default_img.png" alt="Card image cap">-->
+                    <!--<div class="card-block">-->
+                    <!--<h4 class="card-title">Card title</h4>-->
+
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="li-card col-md-4 col-sm-12">-->
+                    <!--<div class="card">-->
+                    <!--<img class="card-img-top card-img-top img-fluid" src="/images/default_img.png" alt="Card image cap">-->
+                    <!--<div class="card-block">-->
+                    <!--<h4 class="card-title">Card title</h4>-->
+
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="li-card col-md-4 col-sm-12">-->
+                    <!--<div class="card">-->
+                    <!--<img class="card-img-top img-fluid" src="/images/default_img.png" alt="Card image cap">-->
+                    <!--<div class="card-block">-->
+                    <!--<h4 class="card-title">Card title</h4>-->
+
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                </ul>
+
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
 </body>
 </html>
