--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>MiniCourse</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
 
+        </div>
+    </div>
+
+</div>
+
+<script src="/js/jquery-3.2.1.js"></script>
+
+<script src="/js/bootstrap.js"></script>
+<script src="./index.js"></script>
 </body>
+
 </html>
