styling of the nav bar

--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -28,24 +28,21 @@
 
 
 <div class="container-fluid">
-    <div class="row no-gutters align-content-center" id="headerbar" style="height: 60px; padding-top: 10px; padding-bottom: 10px">
-        <div class="col-sm-2">
+    <div class="row no-gutters align-content-center" id="headerbar" style="height: auto; padding-top: 10px; padding-bottom: 10px">
+        <div class="col-sm-2 col-12">
             <img src="./../images/logo.png" style="height: 40px; padding-left: 30px">
         </div>
-        <div class="col-sm-2 offset-2">
+        <div class="col-sm-3 offset-2 col-12" >
             <!--empty for search text box later-->
         </div>
-        <div class="col-sm-1 align-middle"></div>
-                <div class="col-sm-1 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a class="align-middle" style="text-align: center" href="#"><span class="glyphicon glyphicon-home"
-                                                     aria-hidden="true"></span> Library</a></div>
-                <div class="col-sm-1 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a class="align-middle" style="text-align: center" href="#"><span class="glyphicon glyphicon-info-sign"
-                                                   aria-hidden="true"></span>Events</a></div>
-                <div class="col-sm-1 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a class="align-middle" style="text-align: center" href="#"><i class=""></i>Teachers</a></div>
+                <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a class="header-links align-middle" style="text-align: center; color: #666" href="#">Library</a></div>
+                <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a class="align-middle header-links" style="text-align: center; color: #666" href="#">Events</a></div>
+                <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a class="align-middle header-links" style="text-align: center; color: #666" href="#">Teachers</a></div>
 
 
-                <div class="dropdown col-sm-2 align-middle" style=" padding-top: 5px; padding-bottom: 5px">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                <div class="dropdown col-sm-2 col-12 align-middle" style=" padding-top: 5px; padding-bottom: 5px">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<!-- <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;-->
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links " data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false"><img src="./../images/boy.png" style="height: 30px; border-radius: 50%" class="img-circle">
                         &nbsp;&nbsp;John Doe <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -64,8 +61,23 @@
 
         </div>
 
+    <header class="jumbotron" style=" margin-bottom: 0; background-image: url(./../images/bg.jpg)">
 
-    <div class="row no-gutters" style="min-height: 100%; background-color: #EEE">
+        <!-- Main component for a primary marketing message or call to action -->
+
+        <div class="container">
+            <div class="row row-header">
+                <div class="col-xs-12 col-sm-6 offset-3 text-center">
+                    <h1 style="color: floralwhite">Library</h1>
+<br>
+                    <p style="color: floralwhite; font-size: x-large">Browse our collection of courses created by the best teachers of India</p>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="row no-gutters" style=" background-color: #DDD">
 
     </div>
 
