--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -3,22 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>MiniCourse</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="./../css/bootstrap.css">
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+            <div class="row">
+                <div class="col text-center" style="border: 1px solid red;">
+                    <h5 class="text-uppercase">Teacher</h5>
+                    <p id="teacher">Anup Sir</p>
+                </div>
+                <div class="col text-center" style="border: 1px solid red">
+                    <h5 class="text-uppercase">Ratings</h5>
+                    <p id="ratings">Anup Sir</p>
+                </div>
+                <div class="col text-center" style="border: 1px solid red">
+                    <h5 class="text-uppercase">Reviews</h5>
+                    <p id="noOfReviews">Anup Sir</p>
+                </div>
+                <div class="col text-center" style="border: 1px solid red">
+                    <h5 class="text-uppercase">Duration</h5>
+                    <p id="miniCourseDuration">Anup Sir</p>
+                </div>
+                <div class="col text-center" style="border: 1px solid red">
+                    <h5 class="text-uppercase">Difficulty</h5>
+                    <p id="difficulty">Anup Sir</p>
+                </div>
+                <div class="col text-center" style="border: 1px solid red">
+                    <h5 class="text-uppercase">Relevance</h5>
+                    <p id="relevance">Anup Sir</p>
+                </div>
+                <div class="col text-center" style="border: 1px solid red">
+                    <h5 class="text-uppercase">|</h5>
+                </div>
+                <div class="col-sm-2 text-center" style="border: 1px solid red;padding-top: 10px">
+                    <button class="btn btn-success" style="vertical-align: middle">Enroll</button>
+                </div>
 
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-9" style="padding-left: 0px;">
+            <div style="border: 1px solid blue;height: 500px;">
+
+            </div>
+        </div>
+        <div class="col-sm-3" style="padding-right: 0px;">
+            <div style="border: 1px solid red;height: 500px;">
+
+            </div>
         </div>
     </div>
 
 </div>
 
-<script src="/js/jquery-3.2.1.js"></script>
+<script src="./../js/jquery-3.2.1.js"></script>
 
-<script src="/js/bootstrap.js"></script>
+<script src="./../js/bootstrap.js"></script>
 <script src="./index.js"></script>
 </body>
 
