dropdown list updated

--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -42,13 +42,13 @@
 
                 <div class="dropdown col-sm-2 col-12 align-middle" style=" padding-top: 5px; padding-bottom: 5px">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<!-- <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;-->
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links " data-toggle="dropdown"
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links " data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false"><img src="./../images/boy.png" style="height: 30px; border-radius: 50%" class="img-circle">
                         &nbsp;&nbsp;John Doe <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">My Courses</a></li>
-                        <li><a href="#">My Bookmarks</a></li>
-                        <li><a onclick="logoutfn()">logout</a></li>
+                    <ul class="dropdown-menu" style="padding: 0; margin-top:10px; border: none; border-radius: 0;border-bottom-right-radius: .125rem;border-bottom-left-radius: .125rem;background-color: #FFF">
+                        <li style="padding: 10px"><a href="#">My Courses</a></li>
+                        <li style="padding: 10px;"><a href="#">My Bookmarks</a></li>
+                        <li style="padding: 10px;padding-left: 20px"><a onclick="logoutfn()"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;logout</a></li>
                     </ul>
                 </div>
             <!--<div class="col-sm-6 text-right">-->
