--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -91,9 +91,21 @@
     </header>
 
 </div>
-<div class="container">
+<div class="container" style="margin-top: 20px">
 
+    <div class="row">
+        <div class="col-sm-3" style="background-color: whitesmoke; height: 900px;">
 
+        </div>
+        <div class="col-sm-9">
+            <div class="row" style="background-color: whitesmoke;height: 60px; margin-bottom: 15px">
+
+            </div>
+            <div class="row" style="background-color: whitesmoke; height: 750px;">
+
+            </div>
+        </div>
+    </div>
 
 </div>
 
