--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -56,11 +56,11 @@
             &nbsp;&nbsp;John Doe <span class="caret"></span></a>
             <ul class="dropdown-menu"
                 style="padding: 0; margin-top:10px; border: none; border-radius: 0;border-bottom-right-radius: .25rem;border-bottom-left-radius: .25rem;background-color: #FFF">
-                <li style="padding: 10px ; border-bottom: solid 1px #DDD"><a style="color: #666" href="#"
+                <li style="padding: 10px ;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666" href="#"
                                                                              class="header-links">My Courses</a></li>
-                <li style="padding: 10px; border-bottom: solid 1px #DDD"><a style="color: #666" href="#"
+                <li style="padding: 10px;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666" href="#"
                                                                             class="header-links">My Bookmarks</a></li>
-                <li style="padding: 10px;"><a onclick="logoutfn()" style="color: #666" class="header-links">Logout</a>
+                <li style="padding: 10px;padding-left: 20px;"><a onclick="logoutfn()" style="color: #666" class="header-links">Logout</a>
                 </li>
             </ul>
         </div>
@@ -91,17 +91,19 @@
     </header>
 
 </div>
-<div class="container" style="margin-top: 20px">
+<div class="container" style="margin-top: 30px">
 
     <div class="row">
-        <div class="col-sm-3" style="background-color: whitesmoke; height: 900px;">
-
-        </div>
-        <div class="col-sm-9">
-            <div class="row" style="background-color: whitesmoke;height: 60px; margin-bottom: 15px">
+        <div class="col-sm-3">
+            <div class="row" style="background-color: whitesmoke;height: 400px;box-shadow: #DDD 0 0px 20px 1px ; border-radius: .125rem">
 
             </div>
-            <div class="row" style="background-color: whitesmoke; height: 750px;">
+        </div>
+        <div class="col-sm-9">
+            <div class="row" style="background-color: whitesmoke;height: 60px; box-shadow: #DDD 0 0px 20px 1px ; border-radius: .125rem;margin-bottom: 30px">
+
+            </div>
+            <div class="row" style="background-color: whitesmoke; height: 750px;box-shadow: #DDD 0 0px 20px 1px ; border-radius: .125rem">
 
             </div>
         </div>
