--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -26,7 +26,7 @@
     </script>
 </head>
 <body>
-
+<!--just to check-->
 <div class="container-fluid">
 
     <div class="row no-gutters align-content-center headerbar" id="headerbar"
@@ -103,66 +103,17 @@
             <div class="row"
                  style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 EXAMINATION
-                <!---->
-                <!--<label class="">-->
-                <!--<input type="checkbox"> JEE Mains<br/>-->
-                <!--</label>-->
-                <!--<label class="">-->
-                <!--<input type="checkbox"> JEE Advanced<br>-->
-                <!--</label>-->
-                <!--<br>-->
-                <!--<label class="">-->
-                <!--<input type="checkbox"> CBSE<br>-->
-                <!--</label>-->
-
-
-                <!--M2-->
-
-
-                <!--<div>-->
-                <!---->
-                <!--<input type="checkbox"> JEE Mains-->
-                <!--<br>-->
-                <!--<input type="checkbox"> JEE Advanced-->
-                <!--<br>-->
-                <!--<input type="checkbox"> CBSE-->
-                <!--<br>-->
-                <!--</div>-->
-
-
-                <!--M3
-                    I prefer this method the most
-
-                -->
-
-
-                <!--<div class="form-check">-->
-                    <!--<label class="form-check-label">-->
-                        <!--<input type="checkbox"> JEE Mains<br/>-->
-                    <!--</label>-->
-                    <!--<label class="form-check-label">-->
-                        <!--<input type="checkbox"> JEE Advanced<br>-->
-                    <!--</label>-->
-                    <!--<br>-->
-                    <!--<label class="form-check-label">-->
-                        <!--<input type="checkbox"> CBSE<br>-->
-                    <!--</label>-->
-                <!--</div>-->
-
-                <!--M4-->
-
-                <!--<div class="form-check">-->
-                    <!--<label class="form-check-label">-->
-                        <!--<input class="form-check-input" type="checkbox"> JEE Mains<br/>-->
-                    <!--</label>-->
-                    <!--<label class="form-check-label">-->
-                        <!--<input class="form-check-input" type="checkbox"> JEE Advanced<br>-->
-                    <!--</label>-->
-                    <!--<br>-->
-                    <!--<label class="form-check-label">-->
-                        <!--<input class="form-check-input" type="checkbox"> CBSE<br>-->
-                    <!--</label>-->
-                <!--</div>-->
+                <label class="">
+                    <input type="checkbox"> JEE Mains<br>
+                </label>
+<br>
+                <label class="">
+                    <input type="checkbox"> JEE Advanced<br>
+                </label>
+<br>
+                <label class="">
+                    <input type="checkbox"> CBSE<br>
+                </label>
 
             </div>
         </div>
