styling of library page

--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -102,7 +102,7 @@
         <div class="col-sm-3">
             <div class="row"
                  style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
-                EXAMINATION
+                <span>EXAMINATION</span>
 
                 <!---->
                                 <!--<label class="">-->
@@ -119,18 +119,17 @@
 
                                 <!--M2-->
 
+<br><br>
+                                <div>
 
-                                <!--<div>-->
-                                <!---->
-                                <!--<input type="checkbox"> JEE Mains-->
-                                <!--<br>-->
-                                <!--<input type="checkbox"> JEE Advanced-->
-                                <!--<br>-->
-                                <!--<input type="checkbox"> CBSE-->
-                                <!--<br>-->
-                                <!--</div>-->
-
-
+                                <input type="checkbox"> JEE Mains
+                                <br>
+                                <input type="checkbox"> JEE Advanced
+                                <br>
+                                <input type="checkbox"> CBSE
+                                <br>
+                                </div>
+<br>
                                <!--M3
  -                    I prefer this method the most
  -
@@ -153,36 +152,36 @@
                                 <!--M4-->
 
                                 <!--<div class="form-check">-->
-                                    <!--<label class="form-check-label">-->
-                                        <!--<input class="form-check-input" type="checkbox"> JEE Mains<br/>-->
+                                    <!--<label class="form-check-label ">-->
+                                        <!--<input type="checkbox"> JEE Mains<br/>-->
                                     <!--</label>-->
                                     <!--<label class="form-check-label">-->
-                                        <!--<input class="form-check-input" type="checkbox"> JEE Advanced<br>-->
+                                        <!--<input type="checkbox"> JEE Advanced<br>-->
                                     <!--</label>-->
                                     <!--<br>-->
                                     <!--<label class="form-check-label">-->
-                                        <!--<input class="form-check-input" type="checkbox"> CBSE<br>-->
+                                        <!--<input type="checkbox"> CBSE<br>-->
                                     <!--</label>-->
                                 <!--</div>-->
-                <label class="">
-                    <input type="checkbox"> JEE Mains<br>
-                </label>
-<br>
-                <label class="">
-                    <input type="checkbox"> JEE Advanced<br>
-                </label>
-<br>
-                <label class="">
-                    <input type="checkbox"> CBSE<br>
-                </label>
+                <!--<label class="">-->
+                    <!--<input type="checkbox"> JEE Mains<br>-->
+                <!--</label>-->
+<!--<br>-->
+                <!--<label class="">-->
+                    <!--<input type="checkbox"> JEE Advanced<br>-->
+                <!--</label>-->
+<!--<br>-->
+                <!--<label class="">-->
+                    <!--<input type="checkbox"> CBSE<br>-->
+                <!--</label>-->
 
             </div>
         </div>
         <div class="col-sm-9">
             <div class="row"
                  style="height: auto;background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">
-                <div class="col-sm-1" style="color: #BBB; padding: 0; padding-left: 15px; align-self: center">
-                    <b>FILTERS</b></div>
+                <!--<div class="col-sm-1" style="color: #BBB; padding: 0;  align-self: center">-->
+                    <!--<b>FILTERS</b></div>-->
                 <div class="col-sm-11" style="padding: 0">
 
                     <ul style="list-style-type: none; margin: 0">
