basic str of filter bar

--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -101,16 +101,32 @@
     <div class="row">
         <div class="col-sm-3">
             <div class="row"
-                 style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
-                <span>EXAMINATION</span>
+                 style="padding: 0px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE; padding: 10px">
+EXAMINATION
+                </div>
+                <div style="width: 100%;height: auto;padding: 10px;border-bottom: solid 2px #EEE">
+MEDIUM
+                </div>
+                <div style="width: 100%;height: auto;padding: 10px;border-bottom: solid 2px #EEE">
+DIFFICULTY
+                </div>
+                <div style="width: 100%;height: auto;padding: 10px;border-bottom: solid 2px #EEE">
+DURATION
+                </div>
+                <div style="width: 100%;height: auto;padding: 10px">
+CATEGORY
+                </div>
             </div>
         </div>
+
+
         <div class="col-sm-9">
             <div class="row"
                  style="height: auto;background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">
                 <div class="col-sm-1" style="color: #BBB; padding: 0;  align-self: center">
                     <b>FILTERS</b></div>
-                <div class="col-sm-11" style="padding: 0">
+                <div class="col-sm-11" style="padding: 0; padding-left: 15px">
 
                     <ul style="list-style-type: none; margin: 0; padding: 0">
 
