--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -64,8 +64,8 @@
                                                                                                href="#"
                                                                                                class="header-links">My
                     Bookmarks</a></li>
-                <li style="padding: 10px;padding-left: 20px;"><a onclick="logoutfn()" style="color: #666"
-                                                                 class="header-links">Logout</a>
+                <li style="padding: 10px;padding-left: 20px;">
+                    <a onclick="logoutfn()" style="color: #666" class="header-links">Logout</a>
                 </li>
             </ul>
         </div>
